set up options in footer

--- a/eco-wax/src/App.css
+++ b/eco-wax/src/App.css
@@ -38,7 +38,7 @@
 }
 .footer{
   background-color: #282c34;
-  height: 200px;
+  height: 400px;
   color: white;
   align-items:flex-start;
   position: relative;
@@ -46,9 +46,7 @@
   /* left: 50px; */
 }
 .footer-icons{
-  height: 50px;
-  width: 50px;
-  margin: auto;
+  font-size: 25px;
 }
 #navBarMain{
   height: 90px;
@@ -65,4 +63,34 @@
 #textTrigger{
   font-size: 25px;
   margin: auto
+}
+#offcanvasNavbar{
+  color: white
+}
+#navbarOptions{
+  font-size: 20px;
+}
+.carousel{
+  height: 700px;
+  width: 1500px;
+  margin: auto;
+  position: absolute;
+  border: solid white 1px;
+  border-radius: 15px;
+}
+.d-block{
+  height: auto;
+  width: max-content;
+}
+.carouselMain{
+  height: 701px;
+  width: 100%;
+  border: solid red 1px;
+  background-color: #282c34;
+}
+.productMain{
+  background-color: pink;
+  border: black solid 1px;
+  height: 800px;
+  width: 100%;
 }
