--- a/pallet305-website/src/style/about.css
+++ b/pallet305-website/src/style/about.css
@@ -1,15 +1,26 @@
 .text-about {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Times New Roman, 'Times', serif;
     font-size: 12px;
-    margin-top: 19px;
     text-align: justify;
+    padding-top: 20px;
 }
-/* #imgAbout{
-    height: max-content;
-    width: min-content;
-} */
-
-#magazine {
+:root {
+    --animate-duration: 1s;
+    --animate-delay: 1s;
+    --animate-repeat: 100;
+  }
+  .animate__animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-duration: var(--animate-duration);
+    animation-duration: var(--animate-duration);
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+  }
+  
+  #magazine {
     height: 100%;
     width: 100%;
     padding-bottom: 15px;
