--- a/pallet305-website/src/style/about.css
+++ b/pallet305-website/src/style/about.css
@@ -4,16 +4,15 @@
     text-align: justify;
     padding-top: 20px;
 }
-
   .animate__animated {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
+    -webkit-animation-duration: 15s;
+    animation-duration: 15s;
     -webkit-animation-duration: var(--animate-duration);
     animation-duration: var(--animate-duration);
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
+    /* -webkit-animation-fill-mode: both;
+    animation-fill-mode: both; */
+    /* -webkit-animation-iteration-count: infinite; */
+    /* animation-iteration-count: infinite; */
   }
   
   #magazine {
