--- a/pallet305-website/src/style/design.css
+++ b/pallet305-website/src/style/design.css
@@ -13,7 +13,6 @@
 }
 
 #template{
-    /* height: 100%; */
     width: 100%;
     border-radius: 25px;
     background-color: whitesmoke;
@@ -23,3 +22,13 @@
     /* margin: 15px; */
     
 }
+.animate__animated {
+    -webkit-animation-duration: 55s;
+    animation-duration: 55s;
+    -webkit-animation-duration: var(--animate-duration);
+    animation-duration: var(--animate-duration);
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-iteration-count: calc(5);
+    animation-iteration-count: calc(5);
+  }
