--- a/minipancake-app/src/style/header.css
+++ b/minipancake-app/src/style/header.css
@@ -1,4 +1,10 @@
-.header-container{
+.header.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-img{
     background-image: url('../images/header-container.jpg');
     width: 100%;
     height: 70vh;
@@ -6,4 +12,18 @@
     object-fit: fill;
     object-position: center;
     z-index: -1;
+}
+
+.shopping{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+    font-weight: 600;
+    font-family: 'Edo', sans-serif;
+    width: 10%;
+    height: 5vh;
+    box-shadow: 1px 0 4px 6px rgba(0, 0, 0, 0.6);
+    transition: all 0.5s;
 }
