--- a/minipancake-app/src/style/header.css
+++ b/minipancake-app/src/style/header.css
@@ -2,20 +2,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .header-img{
-    background-image: url('../images/header-container.jpg');
     width: 100%;
-    height: 70vh;
+    /* height: 60vh; */
     position: fixed;
-    object-fit: fill;
+    left: 0%;
+    top: 15%;
+    object-fit: cover;
     object-position: center;
     z-index: -1;
 }
 
+.header-img img{
+    width: 100%;
+}
+
 .shopping{
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -26,4 +32,12 @@
     height: 5vh;
     box-shadow: 1px 0 4px 6px rgba(0, 0, 0, 0.6);
     transition: all 0.5s;
+    z-index: -1;
+}
+
+.shopping:hover{
+    color: #212529;
+    background-color: #fff;
+    border: solid 1px rgba(0, 0, 0, 0.6);
+    font-size: 35px;
 }
