--- a/minipancake-app/src/style/navbar-socialMedia.css
+++ b/minipancake-app/src/style/navbar-socialMedia.css
@@ -2,6 +2,8 @@
     width: 100%;
     height: 10vh;
     background-color: rgba(71, 158, 180, 0.350);
+    position: fixed;
+    top: 15%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,6 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: -1;
 }
 
 .icon-socialMedia span{
