--- a/minipancake-app/src/style/navbar.css
+++ b/minipancake-app/src/style/navbar.css
@@ -2,6 +2,8 @@
     width: 100%;
     height: 15vh;
     background-color: rgba(71, 158, 180, 0.651);
+    position: fixed;
+    top: 0%;
     display: flex;
     justify-content: center;
     align-items: center;
