--- a/minipancake-app/src/style/advertisment.css
+++ b/minipancake-app/src/style/advertisment.css
@@ -1,11 +1,14 @@
 .advertisment-container{
     width: 100%;
     height: 100vh;
-    background-color: rgb(134, 81, 81);
+    background-color: rgb(8, 8, 8);
 }
 
 .advertisment-container img{
     width: 100%;
-    position: relative;
-    top: 2%;
+    height: 100%;
+    position: fixed;
+    top: 100%;
+    z-index: 5;
+
 }
