--- a/minipancake-app/src/style/footer.css
+++ b/minipancake-app/src/style/footer.css
@@ -1,5 +1,6 @@
-.footer-container{visibility: hidden;
+.footer-container{
+    /* visibility: hidden; */
     width: 100%;
-    height: 50vh;
-    background-color: #fff;
+    height: 100vh;
+    background-color: rgb(0, 255, 76);
 }
