--- a/minipancake-app/src/style/ingredients.css
+++ b/minipancake-app/src/style/ingredients.css
@@ -1,39 +1,50 @@
-.ingredients-container{
+.ingredients-section{
+    width: 100%;
+    /* height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
+    /* background-color: rgba(71, 158, 180, 1); */
+
+}
+
+
+
+.ingredients-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     background-color: rgba(71, 158, 180, 1);
     z-index: 3;
     margin-top: 50%;
-    z-index: 3;
 
 }
 
 .ingredients-box{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    margin: 2% 0;
-    width: 80%;
-    height: 50%;
+    margin: 0;
+    width: 50%;
+    height:100%;
     background-color: rgba(71, 158, 180, 1);
     z-index: 3;
 }
 
 .ingredient-individual-box{
-    width: 25%;
+    width: 30%;
     height: 33%;
     margin: 0 5px;
+    background-color: #fff;
 }
 
-.ingredients-box img{
+.ingredient-individual-box img{
     width: 100%;
     height: 100%;
-    border-radius: 50%;
-    object-fit: fill;
+    object-fit: contain;
     object-position: center;
 }
